--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -63,147 +63,154 @@
             <div style="padding-top:30px"></div>
             <p *ngIf="!dialog">Select a source file or upload your source file.
             </p>
-            <nb-select placeholder="Select source file" size="small" [(ngModel)]="selectedSource"
-              (ngModelChange)="sourceChanged($event)" (click)="fixBrokenPageBug()">
-              <nb-option *ngFor="let source of sources" value={{source.id}}>{{source.name}}</nb-option>
-            </nb-select><!--
+            <!--
             <br><br><br>
             <div style="padding-top:10px"></div>
-
+-->
             <div class="mb-1" style="display:none;" id="json-input">
               <div class="mb-2">
                 <br><br>
--->
-            <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('source','json')">
-              {{ 'general.editor.upload' | translate }}
-              <i class="mx-1 fas fa-file-import fa-lg"></i>
-            </button>
-            <!--
+                <nb-select placeholder="Select source file" size="small" [(ngModel)]="selectedSource"
+                  (ngModelChange)="sourceChanged($event)" (click)="fixBrokenPageBug()">
+                  <nb-option *ngFor="let source of sources" value={{source.id}}>{{source.name}}</nb-option>
+                </nb-select>
+                &nbsp;
+                <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('source','json')">
+                  {{ 'general.editor.upload' | translate }}
+                  <i class="mx-1 fas fa-file-import fa-lg"></i>
+                </button>
+                <!--
               <button nbButton class="mr-2" shape="rectangle" size="small" (click)="setMapEditor(true)">
                 {{ 'general.editor.update_field_list' | translate }}
                 <i class="mx-1 fas fa-lg"></i>
               </button>
               -->
-            <nb-select [(ngModel)]="selectedPath" placeholder="Select path" size="small"
-              (selectedChange)="onUpdatePathForDataMap($event)">
-              <nb-option value="">root.</nb-option>
-              <nb-option *ngFor="let path of paths" value={{path}}>.{{path}}</nb-option>
-            </nb-select>
- <!--</div>-->
-<div style="height:500px" id="jsoneditor" (click)="onUpdatePathForDataMap(selectedPath)"
-  (focusout)="onUpdatePathForDataMap(selectedPath)" (blur)="onUpdatePathForDataMap(selectedPath)"></div>
-<!--</div>-->
-<div class="mb-2" id="csv-input" style="display:none;">
-  <div class="mb-2">
-    <br><br>
-    <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('source','csv')">
-      {{ 'general.editor.upload' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button> &nbsp;
-    <button nbButton class="mr-2" shape="rectangle" size="small" (click)="updateCSVTable()">
-      {{ 'general.editor.update_field_list' | translate }}
-      <i class="mx-1 fas fa-lg"></i>
-    </button>
-    <nb-select placeholder="Separator" size="small" [(selected)]="separatorItem"
-      (selectedChange)="updateConfig($event)">
-      <nb-option value=",">Comma separator</nb-option>
-      <nb-option value=";">Semi-colon separator</nb-option>
-      <nb-option value="\t">Tab separator</nb-option>
-    </nb-select>
-  </div>
-  <div class="mb-3" id="csveditor">
-    <nb-tabset>
-      <nb-tab tabTitle="CSV text">
-        <textarea id="textarea" nbInput rows="10" fullWidth=true placeholder="Enter CVS text..."
-          [(ngModel)]="csvSourceData"></textarea>
-      </nb-tab>
-      <nb-tab id="csv-table" tabTitle="CSV Table">
-      </nb-tab>
-    </nb-tabset>
-  </div>
-</div>
-</nb-accordion-item-body>
-</nb-accordion-item>
-<nb-accordion-item expanded="true" [hidden]=dialog>
-  <nb-accordion-item-header>
-    Mapper
-  </nb-accordion-item-header>
-  <nb-accordion-item-body>
-    <div class="mb-2">
-      <p>Select a schema or upload your schema.
-      </p>
-      <nb-select placeholder="Select Json Schema" size="small" [(ngModel)]=selectedSchema
-        (ngModelChange)="schemaChanged($event)">
-        <nb-option *ngFor="let schema of schemas" value={{schema.id}}>{{schema.name}}</nb-option>
-      </nb-select>
-      <!--<br><br><br>
+                <nb-select [(ngModel)]="selectedPath" placeholder="Select path" size="small"
+                  (selectedChange)="onUpdatePathForDataMap($event)">
+                  <nb-option value="">root.</nb-option>
+                  <nb-option *ngFor="let path of paths" value={{path}}>.{{path}}</nb-option>
+                </nb-select>
+              </div>
+              <div style="height:500px; margin-top:10px" id="jsoneditor" (click)="onUpdatePathForDataMap(selectedPath)"
+                (focusout)="onUpdatePathForDataMap(selectedPath)" (blur)="onUpdatePathForDataMap(selectedPath)"></div>
+            </div>
+            <div class="mb-2" id="csv-input" style="display:none;">
+              <div class="mb-2">
+                <br><br>
+                <nb-select placeholder="Select source file" size="small" [(ngModel)]="selectedSource"
+                  (ngModelChange)="sourceChanged($event)" (click)="fixBrokenPageBug()">
+                  <nb-option *ngFor="let source of sources" value={{source.id}}>{{source.name}}</nb-option>
+                </nb-select>&nbsp;
+                <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('source','csv')">
+                  {{ 'general.editor.upload' | translate }}
+                  <i class="mx-1 fas fa-file-import fa-lg"></i>
+                </button> &nbsp;
+                <button nbButton class="mr-2" shape="rectangle" size="small" (click)="updateCSVTable()">
+                  {{ 'general.editor.update_field_list' | translate }}
+                  <i class="mx-1 fas fa-lg"></i>
+                </button>
+                <nb-select placeholder="Separator" size="small" [(selected)]="separatorItem"
+                  (selectedChange)="updateConfig($event)">
+                  <nb-option value=",">Comma separator</nb-option>
+                  <nb-option value=";">Semi-colon separator</nb-option>
+                  <nb-option value="\t">Tab separator</nb-option>
+                </nb-select>
+              </div>
+              <div class="mb-3" id="csveditor">
+                <nb-tabset>
+                  <nb-tab tabTitle="CSV text">
+                    <textarea id="textarea" nbInput rows="10" fullWidth=true placeholder="Enter CVS text..."
+                      [(ngModel)]="csvSourceData"></textarea>
+                  </nb-tab>
+                  <nb-tab id="csv-table" tabTitle="CSV Table">
+                  </nb-tab>
+                </nb-tabset>
+              </div>
+            </div>
+          </nb-accordion-item-body>
+        </nb-accordion-item>
+        <nb-accordion-item expanded="true" [hidden]=dialog>
+          <nb-accordion-item-header>
+            Mapper
+          </nb-accordion-item-header>
+          <nb-accordion-item-body>
+            <div class="mb-2">
+              <p>Select a schema or upload your schema.
+              </p>
+              <nb-select placeholder="Select Json Schema" size="small" [(ngModel)]=selectedSchema
+                (ngModelChange)="schemaChanged($event)">
+                <nb-option *ngFor="let schema of schemas" value={{schema.id}}>{{schema.name}}</nb-option>
+              </nb-select>&nbsp;
+              <!--<br><br><br>
               <div style="padding-top:10px"></div>-->
-      <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('schema','json')">
-        {{ 'general.editor.upload' | translate }}
-        <i class="mx-1 fas fa-file-import fa-lg"></i>
-      </button>
-      <button nbButton class="mr-2" shape="rectangle" size="small" (click)="schemaChanged(getSchema())">
-        {{ 'general.editor.generate_mapper' | translate }}
-        <i class="mx-1 fas fa-lg"></i>
-      </button>
+              <button nbButton class="mr-2" shape="rectangle" size="small" (click)="import('schema','json')">
+                {{ 'general.editor.upload' | translate }}
+                <i class="mx-1 fas fa-file-import fa-lg"></i>
+              </button>
+              <button nbButton class="mr-2" shape="rectangle" size="small" (click)="schemaChanged(getSchema())">
+                {{ 'general.editor.generate_mapper' | translate }}
+                <i class="mx-1 fas fa-lg"></i>
+              </button>
+              <br>
+            </div>
+            <div style="height:500px" id="schemaEditor"></div>
+            <div style="padding-top:50px"></div>
+            <div class="mb-2">
+              <p>Set your map settings.
+              </p>
+            </div>
+            <div style="padding-top:1px"></div>
+            <div style="height:500px" id="jsoneditor2"></div>
+          </nb-accordion-item-body>
+        </nb-accordion-item>
+        <nb-accordion-item expanded="true">
+          <nb-accordion-item-header>
+            Output
+          </nb-accordion-item-header>
+          <nb-accordion-item-body>
+            <p *ngIf="!dialog">Set transform config.
+            </p>
+            <br *ngIf="!dialog"> <br *ngIf="!dialog"> <br *ngIf="!dialog">
+            <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small"
+              (click)="updateConfigSettings()">
+              {{ 'general.dmm.update_config' | translate }}
+              <i class="mx-1 fas fa-file-import fa-lg"></i>
+            </button>
+            <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small"
+              (click)="resetConfigSettings()">
+              {{ 'general.dmm.reset_config' | translate }}
+              <i class="mx-1 fas fa-file-import fa-lg"></i>
+            </button>
+            <br *ngIf="!dialog"> <br *ngIf="!dialog">
+            <div [hidden]=dialog style="height:500px" id="configEditor"></div>
+            <br *ngIf="!dialog"> <br *ngIf="!dialog">
+            <p *ngIf="!dialog">Test or transform.
+            </p>
+            <p *ngIf="dialog">Tranform.
+            </p>
+            <br> <br> <br>
+            <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small" (click)="testAdapter()">
+              {{ 'general.dmm.preview' | translate }}
+              <i class="mx-1 fas fa-file-import fa-lg"></i>
+            </button> &nbsp;
+            <button nbButton class="mr-2" shape="rectangle" size="small" (click)="transform()">
+              {{ 'general.dmm.transform' | translate }}
+              <i class="mx-1 fas fa-file-import fa-lg"></i>
+            </button>
+            &nbsp;
+            <button nbButton class="mr-2" shape="rectangle" size="small" (click)="download()">
+              {{ 'general.dmm.export' | translate }}
+              <i class="mx-1 fas fa-file-import fa-lg"></i>
+            </button>
+            <br> <br>
+            <div style="height:500px" id="jsoneditor3"></div>
+          </nb-accordion-item-body>
+        </nb-accordion-item>
+      </nb-accordion>
+      <!--End Map Editor accordion-->
       <br>
-    </div>
-    <div style="height:500px" id="schemaEditor"></div>
-    <div style="padding-top:50px"></div>
-    <div class="mb-2">
-      <p>Set your map settings.
-      </p>
-    </div>
-    <div style="padding-top:1px"></div>
-    <div style="height:500px" id="jsoneditor2"></div>
-  </nb-accordion-item-body>
-</nb-accordion-item>
-<nb-accordion-item expanded="true">
-  <nb-accordion-item-header>
-    Output
-  </nb-accordion-item-header>
-  <nb-accordion-item-body>
-    <p *ngIf="!dialog">Set transform config.
-    </p>
-    <br *ngIf="!dialog"> <br *ngIf="!dialog"> <br *ngIf="!dialog">
-    <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small" (click)="updateConfigSettings()">
-      {{ 'general.dmm.update_config' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button>
-    <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small" (click)="resetConfigSettings()">
-      {{ 'general.dmm.reset_config' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button>
-    <br *ngIf="!dialog"> <br *ngIf="!dialog">
-    <div [hidden]=dialog style="height:500px" id="configEditor"></div>
-    <br *ngIf="!dialog"> <br *ngIf="!dialog">
-    <p *ngIf="!dialog">Test or transform.
-    </p>
-    <p *ngIf="dialog">Tranform.
-    </p>
-    <br> <br> <br>
-    <button *ngIf="!dialog" nbButton class="mr-2" shape="rectangle" size="small" (click)="testAdapter()">
-      {{ 'general.dmm.preview' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button> &nbsp;
-    <button nbButton class="mr-2" shape="rectangle" size="small" (click)="transform()">
-      {{ 'general.dmm.transform' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button>
-    &nbsp;
-    <button nbButton class="mr-2" shape="rectangle" size="small" (click)="download()">
-      {{ 'general.dmm.export' | translate }}
-      <i class="mx-1 fas fa-file-import fa-lg"></i>
-    </button>
-    <br> <br>
-    <div style="height:500px" id="jsoneditor3"></div>
-  </nb-accordion-item-body>
-</nb-accordion-item>
-</nb-accordion>
-<!--End Map Editor accordion-->
-<br>
-<div class="center">
-</div>
-</nb-card-footer>
-</nb-card>
+      <div class="center">
+      </div>
+    </nb-card-footer>
+  </nb-card>
 </div>
