--- a/frontend/src/app/pages/error-dialog/error-dialog.component.html
+++ b/frontend/src/app/pages/error-dialog/error-dialog.component.html
@@ -33,9 +33,9 @@
   <nb-card-back *ngIf="appConfig.system.detailedErrors">
     <nb-card>
       <nb-card-header>
-        {{ 'general.error' | translate }} :
+        {{ 'general.error' | translate }} <!--:
         {{error?.statusText}}
-        {{error?.header}}
+        {{error?.header}}-->
         <!--{{error?.error?.message}}-->
         <button nbButton outline status="info" class="close" (click)="closeModal(error)">{{ 'general.close' |
           translate
