do not show generate mapper button and schema if schema is not loaded properly

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -148,7 +148,7 @@
                 {{ 'general.editor.upload' | translate }}
                 <i class="mx-1 fas fa-file-import fa-lg"></i>
               </button>
-              <button nbButton class="mr-2" shape="rectangle" size="small" (click)="schemaChanged(getSchema())">
+              <button *ngIf="schemaJson && schemaJson.info!='set your schema here' && !tempSchema" nbButton class="mr-2" shape="rectangle" size="small" (click)="schemaChanged(getSchema())">
                 {{ 'general.editor.generate_mapper' | translate }}
                 <i class="mx-1 fas fa-lg"></i>
               </button>
