--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -160,6 +160,10 @@
               <p>Set your map settings.
               </p>
             </div>
+            <button *ngIf="schemaJson && schemaJson.info!='set your schema here' && !tempSchema" nbButton class="mr-2" shape="rectangle" size="small" (click)="confirmMapping()">
+              {{ 'general.editor.confirm_mapping' | translate }}
+              <i class="mx-1 fas fa-lg"></i>
+            </button>
             <div style="padding-top:1px"></div>
             <div style="height:500px" id="jsoneditor2"></div>
           </nb-accordion-item-body>
