--- a/frontend/src/app/pages/error-dialog/error-dialog.component.html
+++ b/frontend/src/app/pages/error-dialog/error-dialog.component.html
@@ -9,7 +9,7 @@
       </nb-card-header>
       <nb-card-body>
         <ng-container
-          *ngIf="!error?.error || error?.error !== 'EDITOR_VALIDATION_ERROR'; then genericError; else validationError">
+          *ngIf="error?.error != 'EDITOR_VALIDATION_ERROR'; then genericError; else validationError">
         </ng-container>
         <ng-template #genericError>
           {{ 'general.errors' | translate }}
@@ -43,7 +43,7 @@
       </nb-card-header>
       <nb-card-body>
         <ng-container
-          *ngIf="!error?.error || error?.error !== 'EDITOR_VALIDATION_ERROR'; then genericErrorDetails; else validationErrorDetails">
+          *ngIf="error?.error != 'EDITOR_VALIDATION_ERROR'; then genericErrorDetails; else validationErrorDetails">
         </ng-container>
         <ng-template #genericErrorDetails>
           {{error?.status ? "Status : " + error?.status + "\n\n" : null }}
