--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -167,7 +167,7 @@
             <div style="height:500px" id="schemaEditor"></div>
             <div style="padding-top:50px"></div>
             <div class="mb-2">
-              <p>Set your map settings.
+              <p>Set your mapper settings.
               </p>
             </div>
             <div style="padding-top:1px"></div>
