--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -74,6 +74,7 @@
                 <br><br>
                 <nb-select placeholder="Select source file" size="small" [(ngModel)]="selectedSource"
                   (ngModelChange)="sourceChanged($event)" (click)="fixBrokenPageBug()">
+                  <!--<nb-option value="">---select source---</nb-option>-->
                   <nb-option *ngFor="let source of sources" value={{source.id}}>{{source.name}}</nb-option>
                 </nb-select>
                 &nbsp;
@@ -126,7 +127,7 @@
                 <nb-tabset>
                   <nb-tab tabTitle="CSV text">
                     <textarea id="textarea" nbInput rows="10" fullWidth=true placeholder="Enter CVS text..."
-                      [(ngModel)]="csvSourceData"></textarea>
+                      [(ngModel)]="csvSourceData" (ngModelChange)="sourceEditorMode('code')"></textarea>
                   </nb-tab>
                   <nb-tab id="csv-table" tabTitle="CSV Table">
                   </nb-tab>
