adding dialog confirm for unsaved sources/schemas

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -202,7 +202,7 @@
             <div style="height:500px" id="jsoneditor3"></div>
           </nb-accordion-item-body>
         </nb-accordion-item>
-        <nb-accordion-item expanded="false">
+        <nb-accordion-item expanded="false" [hidden]=dialog>
           <nb-accordion-item-header>
             Config
           </nb-accordion-item-header>
@@ -232,5 +232,4 @@
       </div>
     </nb-card-footer>
   </nb-card>
-  <button (click)="test()">Suca</button>
 </div>
