--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -83,7 +83,7 @@
                   <i class="mx-1 fas fa-file-import fa-lg"></i>
                 </button>
                 <button nbButton class="mr-2" shape="rectangle" size="small"
-                  (click)="onUpdatePathForDataMap(selectedPath)">
+                  (click)="onUpdatePathForDataMap(selectedPath, verifyRoot($event))">
                   {{ 'general.editor.confirm_source' | translate }}
                   <i class="mx-1 fas fa-file-import fa-lg"></i>
                 </button>
@@ -94,8 +94,8 @@
               </button>
               -->
                 <nb-select [(ngModel)]="selectedPath" placeholder="Select path" size="small"
-                  (selectedChange)="onUpdatePathForDataMap($event)">
-                  <nb-option value="">root.</nb-option>
+                  (selectedChange)="onUpdatePathForDataMap($event, verifyRoot($event))">
+                  <nb-option value=".root$$$">root.</nb-option>
                   <nb-option *ngFor="let path of paths" value={{path}}>.{{path}}</nb-option>
                 </nb-select>
               </div>
